2007-06-05  Wim Taymans  <wim@fluendo.com>

	* gst-libs/gst/rtp/gstbasertpdepayload.c:
	(gst_base_rtp_depayload_setcaps),
	(gst_base_rtp_depayload_set_gst_timestamp),
	(gst_base_rtp_depayload_change_state):
	Handle timestamp wraparound.

2007-06-05  Wim Taymans  <wim@fluendo.com>

	* gst/playback/gsturidecodebin.c: (no_more_pads_full),
	(new_decoded_pad), (remove_pads), (make_decoder), (setup_source),
	(gst_uri_decode_bin_change_state):
	Make sure we name srcpads uniquely even when using different internal
	decodebins.
	Signal no-more-pads when no more dynamic elements exist.
	Remove pads on cleanup.

2007-06-05  Wim Taymans  <wim@fluendo.com>

	Based on patch by: Thiago Sousa Santos <thiagossantos at gmail dot com>

	* gst/playback/gstqueue2.c: (gst_queue_class_init),
	(gst_queue_init), (gst_queue_finalize),
	(gst_queue_write_buffer_to_file), (gst_queue_have_data),
	(gst_queue_create_read), (gst_queue_read_item_from_file),
	(gst_queue_open_temp_location_file),
	(gst_queue_close_temp_location_file), (gst_queue_locked_flush),
	(gst_queue_locked_enqueue), (gst_queue_locked_dequeue),
	(gst_queue_is_empty), (gst_queue_is_filled),
	(gst_queue_change_state), (gst_queue_set_temp_location),
	(gst_queue_set_property):
	Add support for filebased buffering. Fixes #441264.

2007-06-05  Wim Taymans  <wim@fluendo.com>

	* gst/playback/gstdecodebin2.c: (gst_decode_bin_factory_filter),
	(analyze_new_pad), (connect_pad), (expose_pad), (caps_notify_cb),
	(caps_notify_group_cb), (gst_decode_group_new),
	(gst_decode_group_free):
	Add support for delayed caps fixation when autoplugging.
	Optimize cases where a multiqueue is not needed/wanted, like right after
	anything that is not a demuxer.

2007-06-05  Wim Taymans  <wim@fluendo.com>

	* ext/ogg/gstoggdemux.c: (gst_ogg_pad_parse_skeleton_fisbone),
	(gst_ogg_pad_submit_packet), (gst_ogg_demux_perform_seek),
	(gst_ogg_demux_read_chain), (gst_ogg_demux_collect_chain_info):